# pathology-multitask-project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_STRUCTURE_CN.md  README.md  ablation_overview.md  adsad.py  check.py  count_labels.py  memray.html  note.md  progress_2024-11.md  pyproject.toml  requirements.txt  scan_wsi_thresholds.py  实验记录.md
.github/workflows/: ci.yml
camelyon16/: README.md  checksums.md5  tif_viewer.py
camelyon16/annotations/: README.md
camelyon16/background_issue/: README.md
camelyon16/evaluation/: README.md  evaluate.py
configs/: README.md  defaults.yaml  model_unet.yaml  prepare.yaml  test_plan1_k30.yaml
data2/test/: labels.csv
data2/train/: labels.csv
data2/val/: labels.csv
dev_utils/: README.md
dev_utils/tmp_helpers/: inspect_best_checkpoint.py
notebooks/: README.md
optional_modules/: README.md
optional_modules/attention_modules/: README.md  cbam_block.py  se_block.py
optional_modules/dynamic_loss/: README.md  dwa.py  gradnorm.py
optional_modules/lightweight_backbones/: README.md  efficientnet_encoder.py  (+1 more)
prepare/: README.md  __init__.py  manifest_builder.py  manifest_builder_test.py  manifest_builder_train.py  manifest_builder_val.py  patch_dataset.py  patch_labeling.py  tissue_mask.py  wsi_reader.py  xml_annotations.py
scripts/: README.md  calibrate_wsi_threshold.py  run_ablation.py  run_infer.py  run_prepare_test_manifest.py  run_test_detect.py  run_train.py  train.ps1  train.sh  verify_data_leakage.py
src/: README.md
tests/: README.md  test_dice.py  test_smoke.py
web_demo/: README.md  app.py
(+49 files in other folders)
