[tool.poetry]
name = "pathology-multitask-project"
version = "0.1.0"
description = "Digital pathology multitask (segmentation + classification) baseline."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.2"
torchvision = ">=0.17"
timm = ">=1.0.8"
numpy = ">=1.26"
pandas = ">=2.1"
scikit-learn = ">=1.4"
scikit-image = ">=0.22"
Pillow = ">=10.0"
opencv-python = ">=4.9"
matplotlib = ">=3.8"
albumentations = ">=1.4"
hydra-core = ">=1.3"
omegaconf = ">=2.3"
pytorch-lightning = ">=2.2"
segmentation-models-pytorch = ">=0.3"
tensorboard = ">=2.16"
mlflow = ">=2.10"
rich = ">=13.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"
pre-commit = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
